--- a/manifest_LM-5X.json
+++ b/manifest_LM-5X.json
@@ -1,12 +1,12 @@
 {
   "name": "Firmware receiver",
-  "version": "1.1.0",
+  "version": "1.1.5",
   "builds": [
     {
       "chipFamily": "ESP32-C3",
       "parts": [
         {
-          "path": "https://2909434165-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FOtRD4RmxNSxZyhYDtlYJ%2Fuploads%2FALsBYFbXCyTFx27R7bGQ%2FLM-5X.bin?alt=media&token=de54dce8-4426-4173-9236-7de154eee0b5",
+          "path": "https://2909434165-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FOtRD4RmxNSxZyhYDtlYJ%2Fuploads%2FpmMlOtMRWH1CkcrhCGDK%2FLM-5X.bin?alt=media&token=d8b44e46-34e3-4a80-a3b1-809134836f15",
           "offset": 0
         }
       ]
