--- a/manifest_LM-5X.json
+++ b/manifest_LM-5X.json
@@ -6,7 +6,7 @@
       "chipFamily": "ESP32-C3",
       "parts": [
         {
-          "path": "https://2909434165-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FOtRD4RmxNSxZyhYDtlYJ%2Fuploads%2FVy5oL66ldHbyUzyfLI2n%2FLM-5X.bin?alt=media&token=433829b5-5c89-41f8-b129-0b3b62083f3b",
+          "path": "firmwares/v1.1.5.bin",
           "offset": 0
         }
       ]
